backend/kube/01-ns.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: decisive-stump-travel-hack-2024
  labels:
    name: decisive-stump-travel-hack-2024
