backend/kube/03-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: decisive-stump-travel-hack-2024
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: "0xb1b1/ds-backend-travel-hack-2024:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"

---
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: decisive-stump-travel-hack-2024
  labels:
    app: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: "0xb1b1/ds-worker-travel-hack-2024:latest"
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "300m"
          limits:
            memory: "512Mi"
            cpu: "600m"
